# ipyrs

./: .editorconfig  .pre-commit-config.yaml  Cargo.toml  README.md
crates/juppeta/: Cargo.toml  README.md
crates/juppeta/src/: main.rs
crates/juppeta_py/: Cargo.toml  README.md
