[package]
name = "juppeta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "^1.0.103"
anyhow = "^1.0.72"
uuid = { version = "^1.4.1", features = ["v4"] }
zeromq = { version = "^0.3.3", default_features = false, features = [
    "tokio-runtime",
    "tcp-transport",
] }
serde = { version = "^1.0.173", features = ["derive"] }
